<resources>
    <string name="app_name">Android Guide</string>


    // Main activity
    <string name="screen1WelcomeString">Welcome to Android Guide App</string>
    <string name="screen1ChoiceString">Please, choose the button</string>
    <string name="hello_world">Hello world!</string>
    <string name="screen1ButtonWebsites">Websites</string>
    <string name="screen1ButtonTerminology">Terminology</string>


    // Terminology Activity
    <string name="terminology">Please, type the term</string>
    <string name="ginit">Create a new local repository</string>
    <string name="gcommit">Commit changes to head (but not yet to the remote repository)</string>
    <string name="gpush">git-push- push all branches to your remote repository</string>
    <string name="gadd">Add one or more files to staging (index)</string>
    <string name="gpull">Git-pull - fetch and merge changes on the remote server to your working directory</string>
    <string name="gclone">Create a working copy of a local repository</string>
    <string name="androidlistavd">Show the list of your devices</string>
    <string name="gradlebuild"> Install APK</string>
    <string name="adbshell"> Connect ADB to AVD</string>
    <string name="pmlistpackages"> Show all installed packages</string>
    <string name="emulatoravd"> Start AVD</string>
    <string name="adbinstall"> Install APK into AVD</string>
    <string name="display"> Show screenshotD</string>
    <string name="pmunistall"> Remove App</string>
    <string name="screenshot2"> Take a screenshot</string>



    // About Activity
    <string name="action_about">About</string>
    <string name="screen2AboutText">The Application is developed by Oleg Mytryniuk\n     Course: MAP524. Program: CPA</string>




    // Help Activity
    <string name="action_help">Help</string>
    <string name="help1">Click button "Terminology" if you would like to see the list of terminology from Lecture 2</string>
    <string name="help2">Click button "Websites if you would like to browse the MAP345 course web page and Seneca College web-site as well</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_terminology">Terminology</string>
    <string name="title_activity_auto_complete">AutoComplete</string>
</resources>
