<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    // android:id="@+id/"

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/screen1WelcomeString"
        android:id="@+id/screen1Welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen1ChoiceString"
        android:id="@+id/screen1Choice"
        android:layout_below="@+id/screen1Welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen1ButtonTerminology"
        android:id="@+id/buttonTerminology"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen1ButtonWebsites"
        android:id="@+id/buttonWebsites"
        android:layout_above="@+id/buttonTerminology"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp" />
</RelativeLayout>
